@@ -398,8 +398,8 @@ i18n.phonenumbers.metadata.countryToMetadata = {
 ,[,,"NA","NA"]
 ]
 ,"AN":[,[,,"5\\d{6}","\\d{7}"]
-,[,,"5(?:4\\d|8[239])\\d{4}","\\d{7}",,,"5451234"]
-,[,,"5(?:1[01]|2[0-7]|5\\d|8[016-8])\\d{4}","\\d{7}",,,"5101234"]
+,[,,"5(?:4[2-8]|8[239])\\d{4}","\\d{7}",,,"5451234"]
+,[,,"5(?:1[02]|2\\d|5[0-79]|8[016-8])\\d{4}","\\d{7}",,,"5101234"]
 ,[,,"NA","NA"]
 ,[,,"NA","NA"]
 ,[,,"NA","NA"]
@@ -1567,7 +1567,7 @@ i18n.phonenumbers.metadata.countryToMetadata = {
 ]
 ,"ET":[,[,,"[1-59]\\d{8}","\\d{7,9}"]
 ,[,,"(?:11(?:1(?:1[124]|2[2-57]|3[1-5]|5[5-8]|8[6-8])|2(?:13|3[6-8]|5[89]|7[05-9]|8[2-6])|3(?:2[01]|3[0-289]|4[1289]|7[1-4]|87)|4(?:1[69]|3[2-49]|4[0-3]|6[5-8])|5(?:1[57]|44|5[0-4])|6(?:18|2[69]|4[5-7]|5[1-5]|6[0-59]|8[015-8]))|2(?:2(?:11[1-9]|22[0-7]|33\\d|44[1467]|66[1-68])|5(?:11[124-6]|33[2-8]|44[1467]|55[14]|66[1-3679]|77[124-79]|880))|3(?:3(?:11[0-46-8]|22[0-6]|33[0134689]|44[04]|55[0-6]|66[01467])|4(?:44[0-8]|55[0-69]|66[0-3]|77[1-5]))|4(?:6(?:22[0-24-7]|33[1-5]|44[13-69]|55[14-689]|660|88[1-4])|7(?:11[1-9]|22[1-9]|33[13-7]|44[13-6]|55[1-689]))|5(?:7(?:227|55[05]|(?:66|77)[14-8])|8(?:11[149]|22[013-79]|33[0-68]|44[013-8]|550|66[1-5]|77\\d)))\\d{4}","\\d{7,9}",,,"111112345"]
-,[,,"9[12]\\d{7}","\\d{9}",,,"911234567"]
+,[,,"9(?:[1-3]\\d|5[89])\\d{6}","\\d{9}",,,"911234567"]
 ,[,,"NA","NA"]
 ,[,,"NA","NA"]
 ,[,,"NA","NA"]
@@ -2626,7 +2626,7 @@ i18n.phonenumbers.metadata.countryToMetadata = {
 ]
 ,"KW":[,[,,"[12569]\\d{6,7}|65816\\d{6}","\\d{7,8}|\\d{11}"]
 ,[,,"(?:18\\d|2(?:[23]\\d{2}|4[1-35-9]\\d|5(?:0[034]|[2-46]\\d|5[1-3]|7[1-7])))\\d{4}","\\d{7,8}",,,"22345678"]
-,[,,"(?:5(?:0[0-2568]|5\\d)|6(?:0[034679]|5(?:[015-79]|8(?:[02-9]|1[0-57-9]))|6\\d|7[067]|9[69])|9(?:0[09]|4[049]|6[69]|[79]\\d))\\d{5}","\\d{8}",,,"50012345"]
+,[,,"(?:5(?:0[0-2568]|5\\d)|6(?:0[034679]|5(?:[015-79]|8(?:[02-9]|1[0-57-9]))|6\\d|7[067]|9[069])|9(?:0[09]|4[049]|6[69]|[79]\\d))\\d{5}","\\d{8}",,,"50012345"]
 ,[,,"NA","NA"]
 ,[,,"NA","NA"]
 ,[,,"NA","NA"]
@@ -3091,13 +3091,13 @@ i18n.phonenumbers.metadata.countryToMetadata = {
 ,[,,"NA","NA"]
 ]
 ,"MN":[,[,,"[12]\\d{7,9}|[57-9]\\d{7}","\\d{6,10}"]
-,[,,"[12](?:1\\d|2(?:[1-3]\\d?|7\\d)|3[2-8]\\d{1,2}|4[2-68]\\d{1,2}|5[1-4689]\\d{1,2})\\d{5}|(?:5[0568]|70)\\d{6}","\\d{6,10}",,,"70123456"]
-,[,,"(?:8[89]|9[15689])\\d{6}","\\d{8}",,,"88123456"]
+,[,,"[12](?:1\\d|2(?:[1-3]\\d?|7\\d)|3[2-8]\\d{1,2}|4[2-68]\\d{1,2}|5[1-4689]\\d{1,2})\\d{5}|5[0568]\\d{6}","\\d{6,10}",,,"50123456"]
+,[,,"(?:8[89]|9[013-9])\\d{6}","\\d{8}",,,"88123456"]
 ,[,,"NA","NA"]
 ,[,,"NA","NA"]
 ,[,,"NA","NA"]
 ,[,,"NA","NA"]
-,[,,"7[569]\\d{6}","\\d{8}",,,"75123456"]
+,[,,"7[05-8]\\d{6}","\\d{8}",,,"75123456"]
 ,"MN",976,"001","0",,,"0",,,,[[,"([12]\\d)(\\d{2})(\\d{4})","$1 $2 $3",["[12]1"]
 ,"0$1","",0]
 ,[,"([12]2\\d)(\\d{5,6})","$1 $2",["[12]2[1-3]"]
@@ -4375,8 +4375,8 @@ i18n.phonenumbers.metadata.countryToMetadata = {
 ,[,,"NA","NA"]
 ]
 ,"SX":[,[,,"[5789]\\d{9}","\\d{7}(?:\\d{3})?"]
-,[,,"7215(?:4[2-8]|8[239])\\d{4}","\\d{7}(?:\\d{3})?",,,"7215425678"]
-,[,,"7215(?:1[02]|2\\d|5[03469]|8[01678])\\d{4}","\\d{10}",,,"7215205678"]
+,[,,"7215(?:4[2-8]|8[239]|9[056])\\d{4}","\\d{7}(?:\\d{3})?",,,"7215425678"]
+,[,,"7215(?:1[02]|2\\d|5[034679]|8[014-8])\\d{4}","\\d{10}",,,"7215205678"]
 ,[,,"8(?:00|55|66|77|88)[2-9]\\d{6}","\\d{10}",,,"8002123456"]
 ,[,,"900[2-9]\\d{6}","\\d{10}",,,"9002123456"]
 ,[,,"NA","NA"]
@@ -4426,7 +4426,7 @@ i18n.phonenumbers.metadata.countryToMetadata = {
 ]
 ,"TC":[,[,,"[5689]\\d{9}","\\d{7}(?:\\d{3})?"]
 ,[,,"649(?:712|9(?:4\\d|50))\\d{4}","\\d{7}(?:\\d{3})?",,,"6497121234"]
-,[,,"649(?:2(?:3[12]|4[1-7])|3(?:3[1-39]|4[1-7])|4[34][12])\\d{4}","\\d{10}",,,"6492311234"]
+,[,,"649(?:2(?:3[129]|4[1-7])|3(?:3[1-39]|4[1-7])|4[34][12])\\d{4}","\\d{10}",,,"6492311234"]
 ,[,,"8(?:00|55|66|77|88)[2-9]\\d{6}","\\d{10}",,,"8002345678"]
 ,[,,"900[2-9]\\d{6}","\\d{10}",,,"9002345678"]
 ,[,,"NA","NA"]
@@ -4530,7 +4530,7 @@ i18n.phonenumbers.metadata.countryToMetadata = {
 ]
 ,"TL":[,[,,"[2-47-9]\\d{6}","\\d{7}"]
 ,[,,"(?:2[1-5]|3[1-9]|4[1-4])\\d{5}","\\d{7}",,,"2112345"]
-,[,,"7[2-4]\\d{5}","\\d{7}",,,"7212345"]
+,[,,"7[2-49]\\d{5}","\\d{7}",,,"7212345"]
 ,[,,"80\\d{5}","\\d{7}",,,"8012345"]
 ,[,,"90\\d{5}","\\d{7}",,,"9012345"]
 ,[,,"NA","NA"]
